# cafe

./: .gitignore  CMakeLists.txt  Makefile  README.md  justfile
notes/: index.md
src/: double_linked_list.c  linked_list.c  main.c  red_black_tree.c  single_linked_list.c  sorting.c  vec.c
tests/: double_linked_list.c  linked_list.c  red_black_tree.c  selection.c  single_linked_list.c  sorting.c  vec.c
utils/: sorting.c  testing.c
